DRALM-28 fix problem of layout on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -16,10 +16,22 @@
     margin-top: 30px;
     height:300px; 
     width: 300px;
+    // @media only screen and (max-width: map-get(var.$breakpoints, "mobileS")){
+    //     border: 2px solid blue;
+    //     margin-top: 10px;
+    //     width: 100px;
+    //     height: 100px;
+    // }
     @media only screen and (max-width: map-get(var.$breakpoints, "phone-up")){
         margin-top: 10px;
         width: 150px;
         height: 150px;
+    }
+    @media only screen and (max-width: map-get(var.$breakpoints, "tablet-down")){
+        // border: 2px solid red;
+        margin-left: -30px;
+        width: 200px;
+        height: 200px;
     }
 }
 
