--- a/src/components/Services/Service.module.scss
+++ b/src/components/Services/Service.module.scss
@@ -7,20 +7,6 @@
     overflow: hidden;
 }
 
-.titlesection {
-        // position: absolute; 
-        // z-index: 3;     
-        // // top: 15%;
-        // left: 10%;
-        // color: white; 
-        // font-size: var.$font-size-title;
-        // font-family: "DancingScript"; 
-        // @media screen and (max-width: map-get(var.$breakpoints, "phone-down")){
-        //     top: 5%; 
-        // }
-        // transform: translateY(200px); 
-}
-
 .imgwrapper {
     height: 100%; 
     display: grid; 
