--- a/src/components/Work/Work.module.scss
+++ b/src/components/Work/Work.module.scss
@@ -2,8 +2,6 @@
 @use '../../styles/utils/mixins.scss' as mixin; 
 
 .wrapper{
-    // height: 100vh; 
-    // border: 2px solid orange; 
     display: flex; 
     flex-direction: column; 
 }
@@ -14,7 +12,6 @@
     margin: auto 0; 
     justify-content: center; 
     align-items:center;
-    // height: 45vh;  
     @media screen and (max-width: map-get(var.$breakpoints, "phone-down")){
         flex-direction: column; 
     }
@@ -26,9 +23,18 @@
 }
 
 .title {
-    @include mixin.titlesectionhome; 
-    margin-left: 120px;  
-    font-size: 75px; 
+    // margin-left: 120px;
+    font-size: 50px; 
+    font-family: var.$font-title;
+    margin-left: 30px;
+    @media (max-width: map-get(var.$breakpoints, "tablet-down")) {
+        margin-left: 30px;
+    }
+    @media (max-width: map-get(var.$breakpoints, "phone-down")) {
+        text-align: center;
+        margin-left: 0px;
+    }
+    
 }
 
 .wrapperimg {
